correção diretório do SpringApplication