@@ -1,35 +1,32 @@
 package br.com.fiap.pedidos.service;
 
+import br.com.fiap.pedidos.api.exceptionhandler.ClienteNaoEncontradoException;
+import br.com.fiap.pedidos.api.model.ClienteDto;
 import br.com.fiap.pedidos.api.model.PedidoDto;
 import br.com.fiap.pedidos.config.MessageConfig;
-import br.com.fiap.pedidos.dados.PedidoDados;
-import br.com.fiap.pedidos.domain.exception.PedidoNaoEncontradoException;
 import br.com.fiap.pedidos.domain.model.Pedido;
 import br.com.fiap.pedidos.domain.repository.PedidoRepository;
+import br.com.fiap.pedidos.domain.service.ClienteService;
 import br.com.fiap.pedidos.domain.service.PedidoService;
+import br.com.fiap.pedidos.domain.service.SQSService;
 import org.junit.jupiter.api.*;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.modelmapper.ModelMapper;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class PedidoServiceTest extends PedidoDados {
+public class PedidoServiceTest {
 
     private AutoCloseable closeable;
 
     @Mock
     private PedidoRepository pedidoRepository;
-
-    @InjectMocks
-    private PedidoService pedidoService;
 
     @Mock
     private ModelMapper modelMapper;
@@ -37,8 +34,17 @@ public class PedidoServiceTest extends PedidoDados {
     @Mock
     private MessageConfig messageConfig;
 
+    @Mock
+    private SQSService sqsService;
+
+    @Mock
+    private ClienteService clienteService;
+
+    @InjectMocks
+    private PedidoService pedidoService;
+
     @BeforeEach
-    void setup() {
+    void setUp() {
         closeable = MockitoAnnotations.openMocks(this);
     }
 
@@ -48,78 +54,65 @@ public class PedidoServiceTest extends PedidoDados {
     }
 
     @Nested
-    class adicionarPedido {
+    class Add {
 
         @Test
-        void deveAdicionarPedido_ComSucesso() {
-            var pedido = criarPedido1();
-            var pedidoDto = criarPedidoDto1();
+        void deveCriarPedidoComSucesso() {
+            PedidoDto pedidoDto = new PedidoDto();
+            Pedido pedidoMock = new Pedido();
+            ClienteDto clienteDto = new ClienteDto();
 
-            when(modelMapper.map(pedidoDto, Pedido.class)).thenReturn(pedido);
+            when(modelMapper.map(pedidoDto, Pedido.class)).thenReturn(pedidoMock);
+            when(clienteService.getClienteById(anyLong())).thenReturn(clienteDto);
+            when(pedidoRepository.save(any(Pedido.class))).thenReturn(pedidoMock);
 
-            pedidoService.add(pedidoDto);
+            PedidoDto result = pedidoService.add(pedidoDto);
 
-            verify(pedidoRepository, times(1)).save(pedido);
-            verify(modelMapper, times(1)).map(pedidoDto, Pedido.class);
+            assertNotNull(result);
+        }
+
+        @Test
+        void deveLancarExceptionAoTentaBuscarClienteInexistente() {
+            PedidoDto pedidoDto = new PedidoDto();
+
+            when(clienteService.getClienteById(anyLong())).thenThrow(new ClienteNaoEncontradoException("Cliente não foi encontrado"));
+
+            assertThrows(ClienteNaoEncontradoException.class, () -> pedidoService.add(pedidoDto));
         }
     }
 
     @Nested
-    class buscarPedidoPorId {
-        @Test
-        void deveBuscarPedidoPorId_ComSucesso() {
-            Long id = 1L;
-            Pedido pedido = criarPedido1();
-            PedidoDto pedidoDto = criarPedidoDto1();
-
-            when(pedidoRepository.findById(id)).thenReturn(Optional.of(pedido));
-            when(modelMapper.map(pedido, PedidoDto.class)).thenReturn(pedidoDto);
-
-            PedidoDto resultDto = pedidoService.getPedidoById(id);
-
-            assertEquals(pedidoDto, resultDto);
-            verify(pedidoRepository, times(1)).findById(id);
-            verify(modelMapper, times(1)).map(pedido, PedidoDto.class);
-        }
+    class GetPedidoById {
 
         @Test
-        void aoBuscarPedidoQueNaoExiste_DeveLancarThrowException() {
+        void deveBuscarPedidoPorIdComSucesso() {
             Long id = 1L;
+            Pedido pedidoMock = new Pedido();
+            PedidoDto pedidoDtoMock = new PedidoDto();
 
-            when(pedidoRepository.findById(id)).thenReturn(Optional.empty());
-            when(messageConfig.getPedidoNaoEncontrado()).thenReturn("Pedido não encontrado");
+            when(pedidoRepository.findById(id)).thenReturn(Optional.of(pedidoMock));
+            when(modelMapper.map(pedidoMock, PedidoDto.class)).thenReturn(pedidoDtoMock);
 
-            assertThrows(PedidoNaoEncontradoException.class, () -> pedidoService.getPedidoById(id));
-            verify(pedidoRepository, times(1)).findById(id);
-            verifyNoMoreInteractions(modelMapper);
+            PedidoDto result = pedidoService.getPedidoById(id);
+
+            assertNotNull(result);
         }
     }
 
     @Nested
-    class buscarTodosPedidos {
+    class FindAll {
 
         @Test
-        void deveBuscarTodosPedidos_ComSucesso() {
-            Pedido pedido1 = criarPedido1();
-            Pedido pedido2 = criarPedido2();
-            List<Pedido> pedidos = Arrays.asList(pedido1, pedido2);
-
-            PedidoDto pedidoDto1 = criarPedidoDto1();
-            PedidoDto pedidoDto2 = criarPedidoDto2();
-            List<PedidoDto> expectedDtos = Arrays.asList(pedidoDto1, pedidoDto2);
+        void deveBuscarPedidosComSucesso() {
+            List<Pedido> pedidos = List.of(new Pedido(), new Pedido());
+            List<PedidoDto> pedidoDtos = List.of(new PedidoDto(), new PedidoDto());
 
             when(pedidoRepository.findAll()).thenReturn(pedidos);
-            when(modelMapper.map(pedido1, PedidoDto.class)).thenReturn(pedidoDto1);
-            when(modelMapper.map(pedido2, PedidoDto.class)).thenReturn(pedidoDto2);
+            when(modelMapper.map(any(), eq(PedidoDto.class))).thenReturn(pedidoDtos.get(0), pedidoDtos.get(1));
 
-            List<PedidoDto> resultDtos = pedidoService.findAll();
+            List<PedidoDto> result = pedidoService.findAll();
 
-            // Assert
-            assertEquals(expectedDtos.size(), resultDtos.size());
-            for (int i = 0; i < expectedDtos.size(); i++) {
-                assertEquals(expectedDtos.get(i), resultDtos.get(i));
-            }
-            verify(pedidoRepository, times(1)).findAll();
+            assertEquals(2, result.size());
         }
     }
 }
